--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:alpine
+    image: postgis/postgis:latest
     restart: unless-stopped
     environment:
       - POSTGRES_USER=master
@@ -11,9 +11,9 @@ services:
       - 5432:5432
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - master-db-data:/pgdata
+      - graph-db-data:/pgdata
 
 volumes:
-  master-db-data:
-    name: master-db-data
+  graph-db-data:
+    name: graph-db-data
     external: true
